# prospector-zmk-module

./: CMakeLists.txt  Kconfig
boards/shields/prospector_adapter/: prospector_adapter.overlay
